--- a/public/grid.html
+++ b/public/grid.html
@@ -7,26 +7,26 @@
 		<link rel="stylesheet" type="text/css" href="/css/style.css">
 		<meta name="description" content="Useful Grid (squared) graph paper generator.">
 		<link rel="canonical" href="http://graph4.me/grid">
-		<link rel="apple-touch-icon" sizes="57x57" href="favicon/grid/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="favicon/grid/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="favicon/grid/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="favicon/grid/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="favicon/grid/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="favicon/grid/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="favicon/grid/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="favicon/grid/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="favicon/grid/apple-touch-icon-180x180.png">
-        <link rel="icon" type="image/png" href="favicon/grid/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="favicon/grid/favicon-194x194.png" sizes="194x194">
-        <link rel="icon" type="image/png" href="favicon/grid/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="favicon/grid/android-chrome-192x192.png" sizes="192x192">
-        <link rel="icon" type="image/png" href="favicon/grid/favicon-16x16.png" sizes="16x16">
-        <link rel="manifest" href="favicon/grid/manifest.json">
-        <link rel="mask-icon" href="favicon/grid/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="apple-touch-icon" sizes="57x57" href="/favicon/grid/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/favicon/grid/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/favicon/grid/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/favicon/grid/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/favicon/grid/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/favicon/grid/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/favicon/grid/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/favicon/grid/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/grid/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="/favicon/grid/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicon/grid/favicon-194x194.png" sizes="194x194">
+        <link rel="icon" type="image/png" href="/favicon/grid/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/favicon/grid/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="/favicon/grid/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/favicon/grid/manifest.json">
+        <link rel="mask-icon" href="/favicon/grid/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="apple-mobile-web-app-title" content="Graph paper generator">
         <meta name="application-name" content="Graph paper generator">
         <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-TileImage" content="favicon/grid/mstile-144x144.png">
+        <meta name="msapplication-TileImage" content="/favicon/grid/mstile-144x144.png">
         <meta name="theme-color" content="#ffffff">
 	</head>
 	<script>
@@ -42,7 +42,7 @@
 	        <div class="row">
 
 	        	<div class="graphgenerator">
-					<div class="hone"><h1>Grid graph paper</h1> <a href="#modal" class="btn-float"><img src="images/icon/menu-round-2.png" style="width:35px; height:35px;"></a></div>
+					<div class="hone"><h1>Grid graph paper</h1> <a href="#modal" class="btn-float"><img src="/images/icon/menu-round-2.png" style="width:35px; height:35px;"></a></div>
 					<h5 class="h-first">Type</h5>
 	                <div class="button-block">
 						<button class="btn" type="button" data-val="engineering" data-part="0">Engineering</button>
@@ -121,49 +121,49 @@
 		      		<div>
 			  							<div class="icon-graph">
 			  								<a href="grid.html">
-			  									<img src="images/icon/grid-icon.png" alt="Grid Graph Paper" class="graphicon">
+			  									<img src="/images/icon/grid-icon.png" alt="Grid Graph Paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="grid.html">Grid paper</a></h2>
 			  							</div>
 			  							<div class="icon-graph">
 			  								<a href="dots.html">
-			  									<img src="images/icon/dots-icon.png" alt="Dots grid Paper" class="graphicon">
+			  									<img src="/images/icon/dots-icon.png" alt="Dots grid Paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="dots.html">Dots grid paper</a></h2>
 			  							</div>
 			  							<div class="icon-graph">
 			  								<a href="lined.html">
-			  									<img src="images/icon/lined-icon.png" alt="Lined Graph Paper" class="graphicon">
+			  									<img src="/images/icon/lined-icon.png" alt="Lined Graph Paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="lined.html">Lined paper</a></h2>
 			  							</div>
 			  							<div class="icon-graph">
 			  								<a href="axonometric.html">
-			  									<img src="images/icon/axonometric-icon.png" alt="Axonometric Graph Paper" class="graphicon">
+			  									<img src="/images/icon/axonometric-icon.png" alt="Axonometric Graph Paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="axonometric.html">Axonometric paper</a></h2>
 			  							</div>
 			  							<div class="icon-graph">
 			  								<a href="isometric.html">
-			  									<img src="images/icon/isometric-icon.png" alt="Isometric Graph Paper" class="graphicon">
+			  									<img src="/images/icon/isometric-icon.png" alt="Isometric Graph Paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="isometric.html">Isometric paper</a></h2>
 			  							</div>
 			  							<!--<div class="icon-graph">
 			  								<a href="isometricdots.html">
-			  									<img src="images/icon/dots-icon.png" alt="Dots grid Paper" class="graphicon">
+			  									<img src="/images/icon/dots-icon.png" alt="Dots grid Paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="isometricdots.html">Isometric dotted paper</a></h2>
 			  							</div>-->
 			  							<div class="icon-graph">
 			  								<a href="hexagonal.html">
-			  									<img src="images/icon/hexagonal-icon.png" alt="Hexagonal Graph Paper" class="graphicon">
+			  									<img src="/images/icon/hexagonal-icon.png" alt="Hexagonal Graph Paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="hexagonal.html">Hexagonal paper</a></h2>
 			  							</div>
 			  							<div class="icon-graph">
 			  								<a href="knitting.html">
-			  									<img src="images/icon/knitting-icon.png" alt="Knitting graph paper" class="graphicon">
+			  									<img src="/images/icon/knitting-icon.png" alt="Knitting graph paper" class="graphicon">
 			  								</a>
 			  								<h2><a href="knitting.html">Knitting paper</a></h2>
 			  							</div>
