--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Useful PDF graph paper generator | graph4.me</title>
   <link rel="stylesheet" type="text/css" href="/css/style.css">
-  
+  <meta name="verify-admitad" content="abec824f71" />
   <meta name="description" content="Free online generator of blank printable graph paper A4 and Letter formats PDFs without labels and links: squared, dotted, lined, axonometric, isometric, hexagonal, millimeter, knitting.">
   <meta name="msvalidate.01" content="FE4D413B3AB7DDF52B6E8BDF8EB95A81">
   <meta name="p:domain_verify" content="b2574cb377a9726d5f98ace4961d4f7e">
