--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,15 @@
 	<meta name="theme-color" content="#ffffff">
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSK7EN8PH6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VSK7EN8PH6');
+</script>
 <body>
 	<div class="container">
 		<div class="section">
