--- a/public/graph.html
+++ b/public/graph.html
@@ -8,7 +8,15 @@
 		<meta name="description" content="Useful Engineering (One Millimeter) graph paper generator.">
 		<link rel="canonical" href="http://graph4.me/graph">
 	</head>
- 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSK7EN8PH6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VSK7EN8PH6');
+</script> 
 	<body id="target-bg-linovka"style="background-image: url(/images/linovkabg/graph-heavy-gray.png); background-size:1cm;"> 
 
 		<div class="container">
