--- a/public/grid.html
+++ b/public/grid.html
@@ -29,6 +29,15 @@
         <meta name="msapplication-TileImage" content="/favicon/grid/mstile-144x144.png">
         <meta name="theme-color" content="#ffffff">
 	</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VSK7EN8PH6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VSK7EN8PH6');
+</script>	
 	<script>
 		var curName = 'engineering-5mm-gray-noborder';
 
