--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Free online generator of blank printable graph paper A4 and Letter formats PDFs without labels and links: squared, dotted, lined, axonometric, isometric, hexagonal, millimeter, knitting.">
   <meta name="msvalidate.01" content="FE4D413B3AB7DDF52B6E8BDF8EB95A81">
   <meta name="p:domain_verify" content="b2574cb377a9726d5f98ace4961d4f7e">
+  <meta name="p:domain_verify" content="f6ffb38345a44740ce0cc546c33feef9"/>
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/grid/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="favicon/grid/apple-touch-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="favicon/grid/apple-touch-icon-72x72.png">
@@ -96,5 +97,6 @@
 			</div>
 		</div>
 	</div>
+	
 </body>
 </html>
